<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >

    <string name="app_name" translatable="false">Unlauncher</string>
    <string name="slim_url" translatable="false">https://github.com/jkuester/unlauncher</string>
    <string name="main_placeholder_clock" translatable="false">00:00</string>
    <string name="main_placeholder_date" translatable="false">Sat, Apr 20</string>

    <string-array name="themes_array">
        <item>System default</item>
        <item>Midnight</item>
        <item>Jupiter</item>
        <item>Teal</item>
        <item>Candy</item>
        <item>Pastel</item>
        <item>Noon</item>
        <item>Vlad</item>
        <item>Groovy</item>
    </string-array>

    <string-array name="time_format_array">
        <item>Follow system settings</item>
        <item>24 Hour</item>
        <item>12 Hour</item>
    </string-array>

    <string-array name="clock_type_array">
        <item>No clock</item>
        <item>Digital clock</item>
        <item>Analog clock</item>
        <item>Binary clock</item>
    </string-array>

    <string-array name="quick_button_array">
        <item>Show</item>
        <item>Hide</item>
    </string-array>

    <string-array name="alignment_format_array">
        <item>left</item>
        <item>center</item>
        <item>right</item>
    </string-array>

    <string name="prefs_settings" translatable="false">settings</string>
    <string name="prefs_settings_key_theme" translatable="false">key_theme</string>
    <string name="prefs_settings_key_time_format" translatable="false">time_format</string>
    <string name="prefs_settings_key_toggle_status_bar" translatable="false">hide_status_bar</string>
    <string name="prefs_settings_alignment" translatable="false">alignment</string>
    <string name="content_description_back">Back</string>
    <string name="choose_time_format_dialog_title">Choose Time Format</string>
    <string name="main_fragment_options">Options</string>
    <string name="options_fragment_device_settings">Device Settings</string>
    <string name="options_fragment_change_theme">Change Theme</string>
    <string name="options_fragment_choose_time_format">Choose Time Format</string>
    <string name="options_fragment_choose_clock_type">Choose Clock Type</string>
    <string name="options_fragment_customise_apps">Customise Apps</string>
    <string name="options_fragment_choose_alignment">Choose Alignment</string>
    <string name="options_fragment_customize_quick_buttons">Customise Quick Buttons</string>
    <string name="options_fragment_customize_app_drawer">Customise Drawer</string>
    <string name="options_fragment_toggle_status_bar">Toggle Status Bar</string>
    <string name="options_fragment_hide_status_bar">Hide Status Bar</string>
    <string name="options_fragment_show_status_bar">Show Status Bar</string>
    <string name="customize_app_drawer_fragment_open_keyboard">Open Keyboard</string>
    <string name="customize_app_drawer_fragment_search_all">Search all apps</string>
    <string name="customize_app_drawer_fragment_search_all_subtitle">Hidden apps can be found when searching</string>
    <string name="customize_app_drawer_fragment_auto_theme_wallpaper_text">Set theme background as wallpaper</string>
    <string name="customize_app_drawer_fragment_auto_theme_wallpaper_subtext_no_default_launcher">App needs to be default launcher</string>
    <string name="customize_app_drawer_fragment_visible_apps">Visible Apps</string>
    <string name="customize_app_drawer_fragment_search_field_options">Search Field Options</string>
    <string name="customize_app_drawer_fragment_show_headings">Show Groupings</string>
    <string name="customize_app_drawer_fragment_show_headings_subtitle">Separate apps into alphabetical groups</string>
    <string name="customize_app_drawer_fragment_search_field_options_subtitle_status_hidden">Search Field is hidden</string>
    <string name="customize_app_drawer_fragment_search_field_options_subtitle_status_shown">%s position, keyboard is %s</string>
    <string name="customize_app_drawer_fragment_show_search_bar">Show Search Field</string>
    <string name="customize_app_drawer_fragment_search_bar_position">Position</string>
    <string name="customize_app_drawer_fragment_open_keyboard_subtitle">Display keyboard when showing the app drawer</string>
    <string-array name="search_bar_position_array">
        <item>Top</item>
        <item>Bottom</item>
    </string-array>
    <string name="shown">shown</string>
    <string name="hidden">hidden</string>
    <string name="customise_apps_fragment_add">Add</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_remove">Remove</string>
    <string name="choose_theme_dialog_title">Choose Theme</string>
    <string name="choose_search_bar_position_dialog_title">Set position of the Search Field</string>
    <string name="choose_clock_type_dialog_title">Choose Clock Type</string>
    <string name="choose_alignment_dialog_title">Choose alignment</string>
    <string name="add_apps_fragment_search_apps">Search apps</string>
    <string name="customise_apps_fragment_remove_all">Remove all</string>
    <string name="menu_reset">Reset</string>
    <string name="remove_all_apps_dialog_title">Remove All Apps</string>
    <string name="remove_all_apps_dialog_message">"This action will not uninstall your apps."
    "It is just to confirm if you're clearing this list on purpose"</string>
    <string name="open_app">Open App</string>
    <string name="app_info">App Info</string>
    <string name="hide_app">Hide App</string>
    <string name="rename_app">Rename App</string>
    <string name="uninstall">Uninstall</string>
    <string name="main_date_format">EEE, MMM dd</string>
</resources>
