<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/options_fragment"
    android:layout_marginStart="@dimen/_16sdp"
    android:layout_marginEnd="@dimen/_16sdp"
    android:layout_marginTop="@dimen/_8sdp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.options.OptionsFragment">

    <ImageView
        android:id="@+id/options_fragment_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8ssp"
        android:paddingStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_back"
        android:contentDescription="@string/content_description_back"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/options_fragment_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?headerTextColor"
        android:text="@string/main_fragment_options"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="@dimen/font_size_customize_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/options_fragment_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@+id/options_fragment_title" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_100sdp">

            <TextView
                android:id="@+id/options_fragment_device_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/options_fragment_device_settings"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/options_fragment_change_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:text="@string/options_fragment_change_theme"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_device_settings" />
            <TextView
                android:id="@+id/options_fragment_choose_time_format"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:text="@string/options_fragment_choose_time_format"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_change_theme" />
            <TextView
                android:id="@+id/options_fragment_toggle_status_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:text="@string/options_fragment_toggle_status_bar"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_choose_time_format" />
            <TextView
                android:id="@+id/options_fragment_customise_apps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:text="@string/options_fragment_customise_apps"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/options_fragment_toggle_status_bar" />
            <TextView
                android:id="@+id/options_fragment_choose_alignment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:text="@string/options_fragment_choose_alignment"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/options_fragment_customise_apps" />
            <TextView
                android:id="@+id/options_fragment_customize_quick_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:text="@string/options_fragment_customize_quick_buttons"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_choose_alignment" />
            <TextView
                android:id="@+id/options_fragment_customize_app_drawer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:text="@string/options_fragment_customize_app_drawer"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options_fragment_customize_quick_buttons" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/options_fragment_auto_device_theme_wallpaper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:textColor="?switchTextColor"
                android:text="@string/customize_app_drawer_fragment_auto_theme_wallpaper_text"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/options_fragment_customize_app_drawer" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
