<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customize_app_drawer_fragment_search_field_options"
    android:layout_marginStart="@dimen/margin_sides"
    android:layout_marginEnd="@dimen/margin_sides"
    android:layout_marginTop="@dimen/margin_top_small"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.options.CustomizeSearchFieldFragment">

    <ImageView
        android:id="@+id/customise_apps_fragment_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:paddingStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_back"
        android:contentDescription="@string/content_description_back"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/customise_apps_fragment_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?headerTextColor"
        android:text="@string/customize_app_drawer_fragment_search_field_options"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="@dimen/font_size_customize_title"
        app:layout_constraintStart_toEndOf="@+id/customise_apps_fragment_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_sides_small"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/customise_apps_fragment_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_100sdp">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/customize_app_drawer_fragment_show_search_field_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customize_app_drawer_fragment_show_search_bar"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                android:textColor="?switchTextColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/customize_app_drawer_fragment_search_field_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:text="@string/customize_app_drawer_fragment_search_bar_position"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/customize_app_drawer_fragment_show_search_field_switch" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/customize_app_drawer_open_keyboard_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:text="@string/customize_app_drawer_fragment_open_keyboard"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                android:textColor="?switchTextColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/customize_app_drawer_fragment_search_field_position" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/customize_app_drawer_search_all_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:text="@string/customize_app_drawer_fragment_search_all"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                android:textColor="?switchTextColor"
                app:layout_constraintTop_toBottomOf="@id/customize_app_drawer_open_keyboard_switch"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>