<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customize_app_drawer_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin_sides"
    android:layout_marginEnd="@dimen/margin_sides"
    android:layout_marginTop="@dimen/margin_top_small"
    tools:context=".ui.options.CustomizeAppDrawerFragment">

    <ImageView
        android:id="@+id/customize_app_drawer_fragment_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:paddingStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_back"
        android:contentDescription="@string/content_description_back"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/customize_app_drawer_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?headerTextColor"
        android:text="@string/options_fragment_customize_app_drawer"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="@dimen/font_size_customize_title"
        app:layout_constraintStart_toEndOf="@+id/customize_app_drawer_fragment_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_list_items"
        android:layout_marginStart="@dimen/margin_sides_small"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/customize_app_drawer_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_100sdp">

            <TextView
                android:id="@+id/customize_app_drawer_fragment_visible_apps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customize_app_drawer_fragment_visible_apps"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/customize_app_drawer_fragment_search_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:text="@string/customize_app_drawer_fragment_search_field_options"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/customize_app_drawer_fragment_visible_apps" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/customize_app_drawer_fragment_show_headings_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_list_items"
                android:text="@string/customize_app_drawer_fragment_show_headings"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="@dimen/font_size_customize_options"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="?switchTextColor"
                app:layout_constraintTop_toBottomOf="@id/customize_app_drawer_fragment_search_options" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>